syntax = "proto3";
option go_package = "github.com/dnorambu/pruebas/courier";

message Mensaje {
    string body = 1;
}

message OrdenPyme {
    string id = 1;
    string producto = 2;
    int64 valor = 3;
    string tienda = 4;
    string destino = 5;
    int64 prioridad = 6;
}

message Codigo {
    int64 cod = 1; 
}
// Definir el paquete
message Paquete {
    string id = 1;
    string seguimiento = 2;
    string tipo = 3;
    int64 valor = 4;
    string tienda = 5;
    string estado = 6;
    string destino = 7;  
}

message Entrega {
    string id = 1;
    int64 dignipesos = 2; // Es el dinero que se obtuvo o perdi√≥ en el proceso
    string estado = 3; // Puede ser "Recibido" o "No Recibido"
    int64 intentos = 4;
    string fechaentrega = 5;
}

service CourierService {
    rpc Hello(Mensaje) returns (Mensaje) {}
    rpc CodigoPyme(OrdenPyme) returns (Codigo) {}
    rpc PedirRetail(Mensaje) returns (Paquete) {}
    rpc PedirPrioritario(Mensaje) returns (Paquete) {}
    rpc PedirNormal(Mensaje) returns (Paquete) {}
    rpc ResultadoEntrega(Entrega) returns (Mensaje) {} // No estoy seguro aun del mensaje.
}
